drafts/build_GA_optm/35863262.err
  File "/n/home01/ytan/deviation_ee/drafts/build_GA_optm/dynamite_decompose.py", line 94
    build_GA(n_groups=save=True)
                          ^
SyntaxError: invalid syntax
